--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mahalia-utils (0.0.6) unstable; urgency=medium
+
+  * Initialize I2C control registers as needed by amplified headsets.
+
+ -- tobias <t.herzke@hoertech.de>  Sun, 03 May 2020 10:24:00 +0200
+
 mahalia-utils (0.0.3) unstable; urgency=medium
 
   * Include device serial number in Wifi hotspot name on boot.
